[project]
name = "attacks-on-drl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[atari]>=1.2.2",
    "stable-baselines3[extra]>=2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 120